src/tests/snapshots/hebi__tests__object_load_field__field.snap
---
source: src/tests/object_load_field.rs
expression: snapshot
---
# Modules:


# Input:
class T:
  a = 0
v := T(a=10)
print v.a


# Result (success):
none

# Stdout:
10


