src/tests/snapshots/hebi__tests__object_load_field__nested_unknown_opt.snap
---
source: src/tests/object_load_field.rs
expression: snapshot
---
# Modules:


# Input:
class T:
  a = none
v := T()
print ?v.a.b


# Result (success):
none

# Stdout:
none


