src/tests/snapshots/hebi__tests__object_load_field__unknown_opt.snap
---
source: src/tests/object_load_field.rs
expression: snapshot
---
# Modules:


# Input:
class T: pass
v := T()
print ?v.a


# Result (success):
none

# Stdout:
none


